Update match and remove multi_match