@@ -7,12 +7,10 @@
 
 package org.elasticsearch.xpack.esql.expression.function.fulltext;
 
-import org.apache.lucene.util.BytesRef;
-import org.elasticsearch.TransportVersions;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
-import org.elasticsearch.common.unit.Fuzziness;
+import org.elasticsearch.index.query.MatchQueryBuilder;
 import org.elasticsearch.index.query.QueryBuilder;
 import org.elasticsearch.xpack.esql.capabilities.PostAnalysisPlanVerificationAware;
 import org.elasticsearch.xpack.esql.common.Failure;
@@ -20,7 +18,6 @@ import org.elasticsearch.xpack.esql.common.Failures;
 import org.elasticsearch.xpack.esql.core.InvalidArgumentException;
 import org.elasticsearch.xpack.esql.core.expression.Expression;
 import org.elasticsearch.xpack.esql.core.expression.FieldAttribute;
-import org.elasticsearch.xpack.esql.core.expression.FoldContext;
 import org.elasticsearch.xpack.esql.core.expression.MapExpression;
 import org.elasticsearch.xpack.esql.core.querydsl.query.Query;
 import org.elasticsearch.xpack.esql.core.tree.NodeInfo;
@@ -28,7 +25,6 @@ import org.elasticsearch.xpack.esql.core.tree.Source;
 import org.elasticsearch.xpack.esql.core.type.DataType;
 import org.elasticsearch.xpack.esql.core.type.MultiTypeEsField;
 import org.elasticsearch.xpack.esql.core.util.Check;
-import org.elasticsearch.xpack.esql.core.util.NumericUtils;
 import org.elasticsearch.xpack.esql.expression.function.Example;
 import org.elasticsearch.xpack.esql.expression.function.FunctionAppliesTo;
 import org.elasticsearch.xpack.esql.expression.function.FunctionAppliesToLifecycle;
@@ -40,8 +36,7 @@ import org.elasticsearch.xpack.esql.expression.function.scalar.convert.AbstractC
 import org.elasticsearch.xpack.esql.io.stream.PlanStreamInput;
 import org.elasticsearch.xpack.esql.plan.logical.LogicalPlan;
 import org.elasticsearch.xpack.esql.planner.TranslatorHandler;
-import org.elasticsearch.xpack.esql.querydsl.query.MatchQuery;
-import org.elasticsearch.xpack.esql.type.EsqlDataTypeConverter;
+import org.elasticsearch.xpack.esql.querydsl.query.MultiMatchQuery;
 
 import java.io.IOException;
 import java.util.HashMap;
@@ -50,19 +45,24 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.BiConsumer;
+import java.util.stream.Stream;
 
 import static java.util.Map.entry;
-import static org.elasticsearch.index.query.AbstractQueryBuilder.BOOST_FIELD;
-import static org.elasticsearch.index.query.MatchQueryBuilder.ANALYZER_FIELD;
-import static org.elasticsearch.index.query.MatchQueryBuilder.FUZZY_REWRITE_FIELD;
-import static org.elasticsearch.index.query.MatchQueryBuilder.FUZZY_TRANSPOSITIONS_FIELD;
-import static org.elasticsearch.index.query.MatchQueryBuilder.GENERATE_SYNONYMS_PHRASE_QUERY;
-import static org.elasticsearch.index.query.MatchQueryBuilder.LENIENT_FIELD;
-import static org.elasticsearch.index.query.MatchQueryBuilder.MAX_EXPANSIONS_FIELD;
-import static org.elasticsearch.index.query.MatchQueryBuilder.MINIMUM_SHOULD_MATCH_FIELD;
-import static org.elasticsearch.index.query.MatchQueryBuilder.OPERATOR_FIELD;
-import static org.elasticsearch.index.query.MatchQueryBuilder.PREFIX_LENGTH_FIELD;
 import static org.elasticsearch.index.query.MatchQueryBuilder.ZERO_TERMS_QUERY_FIELD;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.ANALYZER_FIELD;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.BOOST_FIELD;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.FUZZINESS_FIELD;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.FUZZY_REWRITE_FIELD;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.FUZZY_TRANSPOSITIONS_FIELD;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.GENERATE_SYNONYMS_PHRASE_QUERY;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.LENIENT_FIELD;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.MAX_EXPANSIONS_FIELD;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.MINIMUM_SHOULD_MATCH_FIELD;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.OPERATOR_FIELD;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.PREFIX_LENGTH_FIELD;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.SLOP_FIELD;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.TIE_BREAKER_FIELD;
+import static org.elasticsearch.index.query.MultiMatchQueryBuilder.TYPE_FIELD;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.ParamOrdinal.FIRST;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.ParamOrdinal.SECOND;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.ParamOrdinal.THIRD;
@@ -82,10 +82,9 @@ import static org.elasticsearch.xpack.esql.core.type.DataType.LONG;
 import static org.elasticsearch.xpack.esql.core.type.DataType.TEXT;
 import static org.elasticsearch.xpack.esql.core.type.DataType.UNSIGNED_LONG;
 import static org.elasticsearch.xpack.esql.core.type.DataType.VERSION;
-import static org.elasticsearch.xpack.esql.expression.predicate.operator.comparison.EsqlBinaryComparison.formatIncompatibleTypesMessage;
 
 /**
- * Full text function that performs a {@link org.elasticsearch.xpack.esql.querydsl.query.MatchQuery} .
+ * Full text function that performs a {@link org.elasticsearch.xpack.esql.querydsl.query.MultiMatchQuery} .
  */
 public class Match extends FullTextFunction implements OptionalArgument, PostAnalysisPlanVerificationAware {
 
@@ -115,64 +114,53 @@ public class Match extends FullTextFunction implements OptionalArgument, PostAna
         UNSIGNED_LONG,
         VERSION
     );
-
-    protected final Expression field;
-
-    // Options for match function. They don’t need to be serialized as the data nodes will retrieve them from the query builder
-    private final transient Expression options;
-
-    public static final Map<String, DataType> ALLOWED_OPTIONS = Map.ofEntries(
+    public static final Map<String, DataType> OPTIONS = Map.ofEntries(
+        entry(BOOST_FIELD.getPreferredName(), FLOAT),
+        entry(SLOP_FIELD.getPreferredName(), INTEGER),
         entry(ANALYZER_FIELD.getPreferredName(), KEYWORD),
         entry(GENERATE_SYNONYMS_PHRASE_QUERY.getPreferredName(), BOOLEAN),
-        entry(Fuzziness.FIELD.getPreferredName(), KEYWORD),
-        entry(BOOST_FIELD.getPreferredName(), FLOAT),
-        entry(FUZZY_TRANSPOSITIONS_FIELD.getPreferredName(), BOOLEAN),
+        entry(FUZZINESS_FIELD.getPreferredName(), KEYWORD),
         entry(FUZZY_REWRITE_FIELD.getPreferredName(), KEYWORD),
+        entry(FUZZY_TRANSPOSITIONS_FIELD.getPreferredName(), BOOLEAN),
         entry(LENIENT_FIELD.getPreferredName(), BOOLEAN),
         entry(MAX_EXPANSIONS_FIELD.getPreferredName(), INTEGER),
         entry(MINIMUM_SHOULD_MATCH_FIELD.getPreferredName(), KEYWORD),
         entry(OPERATOR_FIELD.getPreferredName(), KEYWORD),
         entry(PREFIX_LENGTH_FIELD.getPreferredName(), INTEGER),
+        entry(TIE_BREAKER_FIELD.getPreferredName(), FLOAT),
+        entry(TYPE_FIELD.getPreferredName(), KEYWORD),
         entry(ZERO_TERMS_QUERY_FIELD.getPreferredName(), KEYWORD)
     );
 
+    // TODO: update descriptions and comments.
     @FunctionInfo(
         returnType = "boolean",
         preview = true,
         description = """
-            Use `MATCH` to perform a <<query-dsl-match-query,match query>> on the specified field.
-            Using `MATCH` is equivalent to using the `match` query in the Elasticsearch Query DSL.
-
-            Match can be used on fields from the text family like <<text, text>> and <<semantic-text, semantic_text>>,
-            as well as other field types like keyword, boolean, dates, and numeric types.
-
-            Match can use <<esql-function-named-params,function named parameters>> to specify additional options for the match query.
-            All <<match-field-params,match query parameters>> are supported.
-
-            For a simplified syntax, you can use the <<esql-match-operator,match operator>> `:` operator instead of `MATCH`.
-
-            `MATCH` returns true if the provided query matches the row.""",
+            Use `MULTI_MATCH` to perform a <<query-dsl-multi-match-query,multi-match query>> on the specified field.
+            The multi_match query builds on the match query to allow multi-field queries.""",
         examples = {
-            @Example(file = "match-function", tag = "match-with-field"),
-            @Example(file = "match-function", tag = "match-with-named-function-params") },
+            @Example(file = "multi-match-function", tag = "multi-match-with-field"),
+            @Example(file = "multi-match-function", tag = "multi-match-with-named-function-params") },
         appliesTo = {
             @FunctionAppliesTo(
                 lifeCycle = FunctionAppliesToLifecycle.COMING,
-                description = "Support for optional named parameters is only available in serverless, or in a future {{es}} release"
+                version = "9.1.0",
+                description = "Support for optional named parameters is only available from 9.1.0"
             ) }
     )
     public Match(
         Source source,
         @Param(
-            name = "field",
-            type = { "keyword", "text", "boolean", "date", "date_nanos", "double", "integer", "ip", "long", "unsigned_long", "version" },
-            description = "Field that the query will target."
-        ) Expression field,
+            name = "fields",
+            type = { "keyword", "boolean", "date", "date_nanos", "double", "integer", "ip", "long", "text", "unsigned_long", "version" },
+            description = "Fields to use for matching"
+        ) List<Expression> fields,
         @Param(
             name = "query",
             type = { "keyword", "boolean", "date", "date_nanos", "double", "integer", "ip", "long", "unsigned_long", "version" },
-            description = "Value to find in the provided field."
-        ) Expression matchQuery,
+            description = "Value to find in the provided fields."
+        ) Expression query,
         @MapParam(
             name = "options",
             params = {
@@ -227,7 +215,7 @@ public class Match extends FullTextFunction implements OptionalArgument, PostAna
                     type = "boolean",
                     valueHint = { "true", "false" },
                     description = "If false, format-based errors, such as providing a text query value for a numeric field, are returned. "
-                        + "Defaults to false."
+                        + "Defaults to true."
                 ),
                 @MapParam.MapParamEntry(
                     name = "max_expansions",
@@ -254,24 +242,59 @@ public class Match extends FullTextFunction implements OptionalArgument, PostAna
                     description = "Number of beginning characters left unchanged for fuzzy matching. Defaults to 0."
                 ),
                 @MapParam.MapParamEntry(
+                    name = "tie_breaker",
+                    type = "float",
+                    valueHint = { "0" },
+                    description = "Controls how score is blended together between field groups. Defaults to 0 (best score from each group)."
+                ),
+                @MapParam.MapParamEntry(
+                    name = "type",
+                    type = "object",
+                    valueHint = { "'best_fields'" },
+                    description = "Controls the way multi_match is executed internally. Can be one of `best_fields`, `most_fields`, "
+                        + "`cross_fields`, `phrase`, `phrase_prefix` or `bool_prefix`. Defaults to 'best_fields'. "
+                        + "See <<multi-match-types,multi_match types>>."
+                ),
+                @MapParam.MapParamEntry(
                     name = "zero_terms_query",
                     type = "keyword",
                     valueHint = { "none", "all" },
                     description = "Indicates whether all documents or none are returned if the analyzer removes all tokens, such as "
                         + "when using a stop filter. Defaults to none."
                 ) },
-            description = "(Optional) Match additional options as <<esql-function-named-params,function named parameters>>."
-                + " See <<query-dsl-match-query,match query>> for more information.",
+            description = "(Optional) Additional options for MultiMatch, "
+                + "passed as <<esql-function-named-params,function named parameters>>.\"\n"
+                + " See <<query-dsl-multi-match-query,multi-match query>> for more information.",
             optional = true
         ) Expression options
     ) {
-        this(source, field, matchQuery, options, null);
+        this(source, fields, query, options, null);
     }
 
-    public Match(Source source, Expression field, Expression matchQuery, Expression options, QueryBuilder queryBuilder) {
-        super(source, matchQuery, options == null ? List.of(field, matchQuery) : List.of(field, matchQuery, options), queryBuilder);
-        this.field = field;
-        this.options = options;
+    // Due to current limitations, the options field may contain a field, in which case treat it as a field, and use "null" for actual
+    // options. We also remember the originally supplied arguments in order to make tests happy.
+    private final transient List<Expression> fields;
+    private final transient List<Expression> fieldsOriginal;
+    private final transient Expression options;
+    private final transient Expression optionsOriginal;
+
+    private static List<Expression> initChildren(Expression query, List<Expression> fields, Expression options) {
+        Stream<Expression> fieldsAndQuery = Stream.concat(Stream.of(query), fields.stream());
+        return (options == null ? fieldsAndQuery : Stream.concat(fieldsAndQuery, Stream.of(options))).toList();
+    }
+
+    protected Match(Source source, List<Expression> fields, Expression query, Expression options, QueryBuilder queryBuilder) {
+        super(source, query, initChildren(query, fields, options), queryBuilder);
+        this.fieldsOriginal = fields;
+        this.optionsOriginal = options;
+
+        if (options == null || options instanceof MapExpression) {
+            this.fields = fields;
+            this.options = options;
+        } else {
+            this.fields = Stream.concat(fields.stream(), Stream.of(options)).toList();
+            this.options = null;
+        }
     }
 
     @Override
@@ -281,41 +304,40 @@ public class Match extends FullTextFunction implements OptionalArgument, PostAna
 
     private static Match readFrom(StreamInput in) throws IOException {
         Source source = Source.readFrom((PlanStreamInput) in);
-        Expression field = in.readNamedWriteable(Expression.class);
         Expression query = in.readNamedWriteable(Expression.class);
-        QueryBuilder queryBuilder = null;
-        if (in.getTransportVersion().onOrAfter(TransportVersions.ESQL_QUERY_BUILDER_IN_SEARCH_FUNCTIONS)) {
-            queryBuilder = in.readOptionalNamedWriteable(QueryBuilder.class);
-        }
-        return new Match(source, field, query, null, queryBuilder);
+        List<Expression> fields = in.readNamedWriteableCollectionAsList(Expression.class);
+        QueryBuilder queryBuilder = in.readOptionalNamedWriteable(QueryBuilder.class);
+        return new Match(source, fields, query, null, queryBuilder);
     }
 
-    // This is not meant to be overriden by MatchOperator - MatchOperator should be serialized to Match
     @Override
-    public final void writeTo(StreamOutput out) throws IOException {
+    public void writeTo(StreamOutput out) throws IOException {
         source().writeTo(out);
-        out.writeNamedWriteable(field());
         out.writeNamedWriteable(query());
-        if (out.getTransportVersion().onOrAfter(TransportVersions.ESQL_QUERY_BUILDER_IN_SEARCH_FUNCTIONS)) {
-            out.writeOptionalNamedWriteable(queryBuilder());
-        }
+        out.writeNamedWriteableCollection(fields);
+        out.writeOptionalNamedWriteable(queryBuilder());
     }
 
     @Override
     protected TypeResolution resolveParams() {
-        return resolveField().and(resolveQuery()).and(resolveOptions()).and(checkParamCompatibility());
+        return resolveFields().and(resolveQuery()).and(resolveOptions());
     }
 
-    private TypeResolution resolveField() {
-        return isNotNull(field, sourceText(), FIRST).and(
-            isType(
-                field,
-                FIELD_DATA_TYPES::contains,
-                sourceText(),
-                FIRST,
-                "keyword, text, boolean, date, date_nanos, double, integer, ip, long, unsigned_long, version"
+    private TypeResolution resolveFields() {
+        return fields.stream()
+            .map(
+                (Expression field) -> isNotNull(field, sourceText(), FIRST).and(
+                    isType(
+                        field,
+                        FIELD_DATA_TYPES::contains,
+                        sourceText(),
+                        FIRST,
+                        "keyword, text, boolean, date, date_nanos, double, integer, ip, long, unsigned_long, version"
+                    )
+                )
             )
-        );
+            .reduce(TypeResolution::and)
+            .orElse(null);
     }
 
     private TypeResolution resolveQuery() {
@@ -328,23 +350,17 @@ public class Match extends FullTextFunction implements OptionalArgument, PostAna
         ).and(isNotNullAndFoldable(query(), sourceText(), SECOND));
     }
 
-    private TypeResolution checkParamCompatibility() {
-        DataType fieldType = field().dataType();
-        DataType queryType = query().dataType();
+    public List<Expression> fields() {
+        return fields;
+    }
 
-        // Field and query types should match. If the query is a string, then it can match any field type.
-        if ((fieldType == queryType) || (queryType == KEYWORD)) {
-            return TypeResolution.TYPE_RESOLVED;
-        }
+    public Expression options() {
+        return options;
+    }
 
-        if (fieldType.isNumeric() && queryType.isNumeric()) {
-            // When doing an unsigned long query, field must be an unsigned long
-            if ((queryType == UNSIGNED_LONG && fieldType != UNSIGNED_LONG) == false) {
-                return TypeResolution.TYPE_RESOLVED;
-            }
-        }
-
-        return new TypeResolution(formatIncompatibleTypesMessage(fieldType, queryType, sourceText()));
+    @Override
+    public String functionName() {
+        return ENTRY.name;
     }
 
     private TypeResolution resolveOptions() {
@@ -369,100 +385,77 @@ public class Match extends FullTextFunction implements OptionalArgument, PostAna
     }
 
     private Map<String, Object> matchQueryOptions() throws InvalidArgumentException {
+        Map<String, Object> options = new HashMap<>();
+        options.put(MatchQueryBuilder.LENIENT_FIELD.getPreferredName(), true);
         if (options() == null) {
-            return Map.of(LENIENT_FIELD.getPreferredName(), true);
+            return options;
         }
 
-        Map<String, Object> matchOptions = new HashMap<>();
-        // Match is lenient by default to avoid failing on incompatible types
-        matchOptions.put(LENIENT_FIELD.getPreferredName(), true);
-
-        populateOptionsMap((MapExpression) options(), matchOptions, SECOND, sourceText(), ALLOWED_OPTIONS);
-        return matchOptions;
-    }
-
-    public Expression field() {
-        return field;
-    }
-
-    public Expression options() {
+        Match.populateOptionsMap((MapExpression) options(), options, THIRD, sourceText(), OPTIONS);
         return options;
     }
 
     @Override
     protected NodeInfo<? extends Expression> info() {
-        return NodeInfo.create(this, Match::new, field(), query(), options(), queryBuilder());
+        // Specifically create new instance with original arguments.
+        return NodeInfo.create(this, Match::new, fieldsOriginal, query(), optionsOriginal);
     }
 
     @Override
     public Expression replaceChildren(List<Expression> newChildren) {
-        return new Match(
-            source(),
-            newChildren.get(0),
-            newChildren.get(1),
-            newChildren.size() > 2 ? newChildren.get(2) : null,
-            queryBuilder()
-        );
+        // "query" is the first child.
+        if (newChildren.getLast() instanceof MapExpression || newChildren.size() == children().size()) {
+            // if the last child is a MapExpression, it is the options map
+            return new Match(
+                source(),
+                newChildren.subList(1, newChildren.size() - 1),
+                newChildren.getFirst(),
+                newChildren.getLast(),
+                queryBuilder()
+            );
+        }
+
+        return new Match(source(), newChildren.subList(1, newChildren.size()), newChildren.getFirst(), null, queryBuilder());
     }
 
     @Override
     public Expression replaceQueryBuilder(QueryBuilder queryBuilder) {
-        return new Match(source(), field, query(), options(), queryBuilder);
+        // Specifically create new instance with original arguments.
+        return new Match(source(), fieldsOriginal, query(), optionsOriginal, queryBuilder);
     }
 
     @Override
     public BiConsumer<LogicalPlan, Failures> postAnalysisPlanVerification() {
         return (plan, failures) -> {
             super.postAnalysisPlanVerification().accept(plan, failures);
-            plan.forEachExpression(Match.class, m -> {
-                if (m.fieldAsFieldAttribute() == null) {
-                    failures.add(
-                        Failure.fail(
-                            m.field(),
-                            "[{}] {} cannot operate on [{}], which is not a field from an index mapping",
-                            functionName(),
-                            functionType(),
-                            m.field().sourceText()
-                        )
-                    );
+            plan.forEachExpression(Match.class, mm -> {
+                for (Expression field : fields) {
+                    if (fieldAsFieldAttribute(field) == null) {
+                        failures.add(
+                            Failure.fail(
+                                field,
+                                "[{}] {} cannot operate on [{}], which is not a field from an index mapping",
+                                functionName(),
+                                functionType(),
+                                field.sourceText()
+                            )
+                        );
+                    }
                 }
             });
         };
     }
 
     @Override
-    public Object queryAsObject() {
-        Object queryAsObject = query().fold(FoldContext.small() /* TODO remove me */);
-
-        // Convert BytesRef to string for string-based values
-        if (queryAsObject instanceof BytesRef bytesRef) {
-            return switch (query().dataType()) {
-                case IP -> EsqlDataTypeConverter.ipToString(bytesRef);
-                case VERSION -> EsqlDataTypeConverter.versionToString(bytesRef);
-                default -> bytesRef.utf8ToString();
-            };
-        }
-
-        // Converts specific types to the correct type for the query
-        if (query().dataType() == DataType.UNSIGNED_LONG) {
-            return NumericUtils.unsignedLongAsBigInteger((Long) queryAsObject);
-        } else if (query().dataType() == DataType.DATETIME && queryAsObject instanceof Long) {
-            // When casting to date and datetime, we get a long back. But Match query needs a date string
-            return EsqlDataTypeConverter.dateTimeToString((Long) queryAsObject);
-        } else if (query().dataType() == DATE_NANOS && queryAsObject instanceof Long) {
-            return EsqlDataTypeConverter.nanoTimeToString((Long) queryAsObject);
-        }
-
-        return queryAsObject;
-    }
-
-    @Override
     protected Query translate(TranslatorHandler handler) {
-        var fieldAttribute = fieldAsFieldAttribute();
-        Check.notNull(fieldAttribute, "Match must have a field attribute as the first argument");
-        String fieldName = getNameFromFieldAttribute(fieldAttribute);
-        // Make query lenient so mixed field types can be queried when a field type is incompatible with the value provided
-        return new MatchQuery(source(), fieldName, queryAsObject(), matchQueryOptions());
+        Map<String, Float> fieldsWithBoost = new HashMap<>();
+        for (Expression field : fields) {
+            var fieldAttribute = fieldAsFieldAttribute(field);
+            Check.notNull(fieldAttribute, "MultiMatch must have field attributes as arguments #1 to #N-1.");
+            String fieldName = getNameFromFieldAttribute(fieldAttribute);
+            fieldsWithBoost.put(fieldName, 1.0f);
+        }
+        return new MultiMatchQuery(source(), Objects.toString(queryAsObject()), fieldsWithBoost, matchQueryOptions());
     }
 
     public static String getNameFromFieldAttribute(FieldAttribute fieldAttribute) {
@@ -483,23 +476,19 @@ public class Match extends FullTextFunction implements OptionalArgument, PostAna
         return fieldExpression instanceof FieldAttribute fieldAttribute ? fieldAttribute : null;
     }
 
-    private FieldAttribute fieldAsFieldAttribute() {
-        return fieldAsFieldAttribute(field);
-    }
-
     @Override
     public boolean equals(Object o) {
-        // Match does not serialize options, as they get included in the query builder. We need to override equals and hashcode to
-        // ignore options when comparing two Match functions
+        // MultiMatch does not serialize options, as they get included in the query builder. We need to override equals and hashcode to
+        // ignore options when comparing two MultiMatch functions
         if (o == null || getClass() != o.getClass()) return false;
-        Match match = (Match) o;
-        return Objects.equals(field(), match.field())
-            && Objects.equals(query(), match.query())
-            && Objects.equals(queryBuilder(), match.queryBuilder());
+        Match mm = (Match) o;
+        return Objects.equals(fields(), mm.fields())
+            && Objects.equals(query(), mm.query())
+            && Objects.equals(queryBuilder(), mm.queryBuilder());
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(field(), query(), queryBuilder());
+        return Objects.hash(fields(), query(), queryBuilder());
     }
 }
